Fixed alignment issues with catalog

--- a/client/styles.css
+++ b/client/styles.css
@@ -14,6 +14,21 @@
  * limitations under the License.
  */
 
+.toycatalog {
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
+
+.box {
+  display: inline-block;
+  width: 300px;
+  height: 200px;
+  background-color: gray;
+  background-image: url("images/toyimage.png");
+  margin: 12px 12px;
+}
+
 body {
   margin: 0;
 }
@@ -31,10 +46,6 @@ a img{
 ::selection {
   background-color: #6ab344;
   color: #fff;
-}
-
-.mdl-grid {
- padding: -!important;
 }
 
 .mdl-cell {
